# vaccinazioni-italia

./: README.md  app.py  compute.py  content.py  pyproject.toml
data/: pop_italy.csv  popolazione_italia.csv  testt.csv
