[tool.poetry]
name = "vaccini-italia"
version = "0.1.0"
description = ""
authors = ["leonardovida <lleonardovida@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.79.0"
watchdog = "^2.0.2"
requests = "^2.25.1"
altair = "^4.1.0"
tensorflow = "^2.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
